# git-oracle

./: .env.example  .gitignore  Makefile  docker-compose.infra.yml  docker-compose.yml  prometheus.yml
.agents/: AGENTS.md
ai_core/: requirements.txt  scratch_test_llm.py  test_fallback.py  test_fixer.py  test_investigator.py  test_langfuse_smoke.py  test_memory.py  test_planner.py  test_procedural_memory.py  test_qdrant_memory.py  test_reviewer.py
ai_core/agents/fixer/: main.py
ai_core/agents/investigator/: main.py
ai_core/agents/planner/: main.py
ai_core/guardrails/: requirements.txt
ai_core/prompt_registry/: main.py  requirements.txt
ai_core/shared/: memory.py  structured_output.py
cli/: pyproject.toml
cli/gitOracle/: main.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
infrastructure/kafka/: create-topics.sh
infrastructure/llm/: docker-compose.yml
infrastructure/neo4j/: init.cypher
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
java-backend/: .gitignore  build.gradle  settings.gradle
java-backend/api-gateway/: build.gradle
java-backend/git-oracle-core/: build.gradle
java-backend/github-bot/: build.gradle
java-backend/orchestrator/: build.gradle
java-backend/test-runner/: build.gradle
memory_store/: omkhatri_test-repo_episodic_20260723_222333.json
models/: Modelfile
python-ai/: requirements.txt
python-ai/eval/: run_evals.py
python-ai/guardrails/: injection_detector.py  main.py  patch_scanner.py  schema_validator.py
(+54 files in other folders)
